fix: background image cut off beyond viewport

--- a/src/pages/match-it/scss/_common.scss
+++ b/src/pages/match-it/scss/_common.scss
@@ -10,7 +10,9 @@ body {
 .bg {
   background-image: url(./assets/img/bg-climb.png);
   background-size: cover;
-  background-position: center;
+  background-position: center, top;
+  background-attachment: fixed;
+  background-repeat: no-repeat;
 }
 
 .main {
